två nya undersidor - diagram & karta

--- a/src/karta.html
+++ b/src/karta.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animering</title>
+    <title>Karta</title>
     <link rel="stylesheet" href="css/main.scss">
 </head>
 <body>
     <header class="header">
-        <h1 class="mainheader">Animering</h1>
+        <h1 class="mainheader">Karta</h1>
         <div class="navmenu">
             <nav class="menu" id="menu">
                 <ul class="headmenu">
                     <li><a href="index.html">HEM</a></li>
                     <li><a href="sass.html">SASS</a></li>
-                    <li><a class="duarhar" href="animering.html">ANIMERING</a></li>
+                    <li><a href="animering.html">ANIMERING</a></li>
                     <li><a href="diagram.html">DIAGRAM</a></li>
-                    <li><a href="karta.html">KARTA</a></li>
+                    <li><a class="duarhar" href="karta.html">KARTA</a></li>
                 </ul>
             </nav>
             </div>
@@ -39,23 +39,14 @@
                 <ul class="mobilmenu">
                     <li><a href="index.html">HEM</a></li>
                     <li><a href="sass.html">SASS</a></li>
-                    <li><a class="duarhar" href="animering.html">ANIMERING</a></li>
+                    <li><a href="animering.html">ANIMERING</a></li>
                     <li><a href="diagram.html">DIAGRAM</a></li>
-                    <li><a href="karta.html">KARTA</a></li>
+                    <li><a class="duarhar" href="karta.html">KARTA</a></li>
                 </ul>
                 </nav>
     </header>
     <main class="main">
-        <div class="animering_img">
-        <picture>
-            <source srcset="images/ozzy_pose.avif" type="image/avif">
-            <source srcset="images/ozzy_pose.webp" type="image/webp">
-            <img class="ozzyimg" src="images/ozzy_pose.jpeg" alt="Ozzy, en svart mops">
-        </picture>
-        </div>
-        <button class="animering_btn">
-            Klicka här
-        </button>
+
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
