--- a/src/sass.html
+++ b/src/sass.html
@@ -15,8 +15,8 @@
                     <li><a href="index.html">HEM</a></li>
                     <li><a class="duarhar" href="sass.html">SASS</a></li>
                     <li><a href="animering.html">ANIMERING</a></li>
-                    <li><a href="#">#</a></li>
-                    <li><a href="#">#</a></li>
+                    <li><a href="diagram.html">DIAGRAM</a></li>
+                    <li><a href="karta.html">KARTA</a></li>
                 </ul>
             </nav>
             </div>
@@ -40,8 +40,8 @@
                     <li><a href="index.html">HEM</a></li>
                     <li><a class="duarhar" href="sass.html">SASS</a></li>
                     <li><a href="animering.html">ANIMERING</a></li>
-                    <li><a href="#">#</a></li>
-                    <li><a href="#">#</a></li>
+                    <li><a href="diagram.html">DIAGRAM</a></li>
+                    <li><a href="karta.html">KARTA</a></li>
                 </ul>
                 </nav>
     </header>
