förbered för diagram

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -46,7 +46,16 @@
                 </nav>
     </header>
     <main class="main">
+        <h2>De 6 mest sökta kurserna på Mittuniversitetet HT2024</h2>
+        <div>
+            <canvas id="courseChart"></canvas>
+          </div>
+          
+          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+          
+    <script>
 
+    </script>
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
