skapa diagram för kurserna

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -48,18 +48,14 @@
     <main class="main">
         <h2>De 6 mest sökta kurserna på Mittuniversitetet HT2024</h2>
         <div>
-            <canvas id="courseChart"></canvas>
+            <canvas class="courseChart"></canvas>
           </div>
-          
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-          
-    <script>
-
-    </script>
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
