huvudrubrik för cirkeldiagram

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -50,6 +50,7 @@
         <div>
             <canvas class="courseChart"></canvas>
           </div>
+        <h2>De 5 mest sökta programmen på Mittundiversitetet HT2024</h2>
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </main>
     <footer class="footer">
