--- a/src/diagram.html
+++ b/src/diagram.html
@@ -51,6 +51,9 @@
             <canvas class="courseChart"></canvas>
           </div>
         <h2>De 5 mest sökta programmen på Mittundiversitetet HT2024</h2>
+        <div>
+            <canvas class="programChart"></canvas>
+        </div>
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </main>
     <footer class="footer">
