--- a/src/diagram.html
+++ b/src/diagram.html
@@ -50,7 +50,7 @@
         <div>
             <canvas class="courseChart"></canvas>
           </div>
-        <h2>De 5 mest sökta programmen på Mittundiversitetet HT2024</h2>
+        <h2>De 5 mest sökta programmen på Mittuniversitetet HT2024</h2>
         <div>
             <canvas class="programChart"></canvas>
         </div>
