layout för diagram-sidan

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -46,15 +46,17 @@
                 </nav>
     </header>
     <main class="main">
-        <h2>De 6 mest sökta kurserna på Mittuniversitetet HT2024</h2>
-        <div>
+        <div id="diagram_main">
+        <h2 class="courseheader">De 6 mest sökta kurserna på Mittuniversitetet HT2024</h2>
+        <div class="courseDiagram">
             <canvas class="courseChart"></canvas>
           </div>
-        <h2>De 5 mest sökta programmen på Mittuniversitetet HT2024</h2>
-        <div>
+        <h2 class="programheader">De 5 mest sökta programmen på Mittuniversitetet HT2024</h2>
+        <div class="programDiagram">
             <canvas class="programChart"></canvas>
         </div>
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+          </div>
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
