--- a/src/karta.html
+++ b/src/karta.html
@@ -46,7 +46,9 @@
                 </nav>
     </header>
     <main class="main">
+        <div class="karta_main">
 
+        </div>
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
