--- a/src/karta.html
+++ b/src/karta.html
@@ -47,12 +47,13 @@
     </header>
     <main class="main">
         <div class="karta_main">
-
+            <iframe class="mapFrame"></iframe>
         </div>
     </main>
     <footer class="footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
 </body>
 </html>
