Hämta position till markerare

--- a/src/karta.html
+++ b/src/karta.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karta</title>
     <link rel="stylesheet" href="css/main.scss">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&libraries=marker" 
+            async 
+            defer>
+    </script>
 </head>
 <body>
     <header class="header">
