Försök till att visa kartan

--- a/src/karta.html
+++ b/src/karta.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karta</title>
     <link rel="stylesheet" href="css/main.scss">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&libraries=marker" 
-            async 
-            defer>
-    </script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&libraries=marker" ></script>
 </head>
 <body>
     <header class="header">
@@ -51,7 +48,7 @@
     </header>
     <main class="main">
         <div class="karta_main">
-            <iframe class="mapFrame"></iframe>
+            <div class="mapFrame"></div>
         </div>
     </main>
     <footer class="footer">
