id för main och footer i karta

--- a/src/karta.html
+++ b/src/karta.html
@@ -46,12 +46,12 @@
                 </ul>
                 </nav>
     </header>
-    <main class="main">
+    <main class="main" id="map_main">
         <div class="karta_main">
             <div class="mapFrame"></div>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="map_footer">
         <p>DT211G | anju2402, Ängla Juliusson | VT 2025</p>
     </footer>
     <script src="js/main.js"></script>
