--- a/src/karta.html
+++ b/src/karta.html
@@ -48,6 +48,10 @@
     </header>
     <main class="main" id="map_main">
         <div class="karta_main">
+            <div class="search">
+            <input type="text" class="locationInput" placeholder="Sök plats eller adress" />
+            <button class="search_button">Sök</button>
+            </div>
             <div class="mapFrame"></div>
         </div>
     </main>
