Uppdatera sökväg till diagram JSdoc

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -46,7 +46,7 @@
                 </nav>
     </header>
     <main class="main">
-        <p>JSDoc-dokumentation: <a href="../out/index.html">Startsida</a></p>
+        <p>JSDoc-dokumentation: <a href="../docs/script.js.html">Startsida</a></p>
         <div id="diagram_main">
         <h2 class="courseheader">De 6 mest sökta kurserna på Mittuniversitetet HT2024</h2>
         <div class="courseDiagram">
