Länk till karta JSDoc

--- a/src/karta.html
+++ b/src/karta.html
@@ -48,7 +48,7 @@
     </header>
     <main class="main" id="map_main">
         <div class="karta_main">
-            
+            <p>JSDoc-dokumenation: <a href="../docs/map.js.html">Startsida</a></p>
             <div class="search">
             <input type="text" class="locationInput" placeholder="Sök plats eller adress" />
             <button class="search_button">Sök</button>
