--- a/src/karta.html
+++ b/src/karta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karta</title>
     <link rel="stylesheet" href="css/main.scss">
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&v=beta"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&v=beta&callback=initMap"></script>
 </head>
 <body>
     <header class="header">
