--- a/src/karta.html
+++ b/src/karta.html
@@ -60,6 +60,6 @@
     </footer>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&v=beta&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIvyEldPfrD0KHaifyoZMhBEf5DzlhAB8&v=beta&callback=initMap"></script>
 </body>
 </html>
